# pritchett-analyzer

./: .gitignore  README.md  __init__.py  pritchett-analyzer.py  pyproject.toml
