[project]
name = "pritchett-analyzer"
version = "0.1.0"
description = "Single-file analyzer for Lant Pritchett's development importance tests"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "click>=8.0.0",
    "matplotlib>=3.7.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
pritchett-analyzer = "pritchett_analyzer:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"